Fix padding/spacing for article summary date values. Make heading for the article summary list match the formatting for the [daily_progress type="assignment"] formatting.

--- a/css/e20r-article-summary.css
+++ b/css/e20r-article-summary.css
@@ -17,6 +17,15 @@ p.e20r-article-post-summary-about {
     margin-bottom: 0;
 }
 p.e20r-article-post-summary-dates {
-     font-size: 0.8rem;
-     font-style: italic;
+    font-size: 0.8rem;
+    font-style: italic;
+    margin: 0;
  }
+h5.e20r-article-post-summary-heading {
+    margin-bottom: 0;
+    padding: 0;
+    font-size: 1.8rem;
+    color: #004c00;
+    font-weight: bold;
+    border-bottom: 1px solid #004c00;
+}
